--- a/EDGE/templates/layout.html
+++ b/EDGE/templates/layout.html
@@ -47,6 +47,19 @@
       {% endblock%}
     </div>
 
+<footer>
+  <div class="container p-3">
+    <div class="row text-center text-white">
+      <div class="col ml-auto">
+        <p>Copyright &copy; 2020</p>
+      </div>
+    </div>
+  </div>       
+</footer>
+
+
+
+
     <!-- SCRIPTS -->
     <script src="{{url_for('static', filename='js/main.js')}}"></script>
     <!-- BOOTSTRAP SCRIPTS -->
