--- a/EDGE/templates/layout.html
+++ b/EDGE/templates/layout.html
@@ -33,10 +33,10 @@
             <a class="nav-link" href="{{ url_for('juego') }}">Juego</a>
           </li>
         </ul>
-        <center><form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search"  style="margin-left: 600px;">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
-        </form></center>
+        </form>
       </div>
                      
     </nav>
@@ -51,7 +51,7 @@
   <div class="container p-3">
     <div class="row text-center text-white">
       <div class="col ml-auto">
-        <p>Copyright &copy; 2020</p>
+        <p style="text-align: right;">Copyright &copy; 2020</p>
       </div>
     </div>
   </div>       
