mostrado a andres serrano con los cambios

--- a/EDGE/templates/home.html
+++ b/EDGE/templates/home.html
@@ -14,9 +14,11 @@
 
   <hr class="my-4"><b>METAS A DESARROLLAR</b></hr>
   <p style="margin-bottom: 50px;">Aqui vas a encontrar todos nuestros obejtivos y metas lo cual podemos evidenciar Desigualdad de Genero ya que con esta pagina podemos ayudar a disminuirla
-
-  <a class="btn_mas" href="{{ url_for('doc') }}" role="button" target="_blank"> ver mas... </a>.</p>
+<!-- boton ver mas -->
+  <a href="{{ url_for('doc') }}" role="button" target="_blank"> ver mas... </a>.</p>
 <!--btn btn-primary btn-lg-->
+
+
 
 <!--TARJETAS INFO-->
 <section class="text-center team">
@@ -271,9 +273,13 @@
             </div>
             <textarea name="" cols="30" rows="10" placeholder="Message" class="form-control"></textarea>
           </div>
-          <div style="background-color: orange">
+
+
+          <div>
             <a type="button" href="mns_enviado" class="btn btn-primary btn-block">Enviar</a>
           </div>
+
+
 <!--  
           <button type="submit" class="btn btn-primary btn-block" >Enviar</button>
 -->
