--- a/EDGE/templates/layout.html
+++ b/EDGE/templates/layout.html
@@ -34,7 +34,7 @@
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search"  style="margin-left: 600px;">
+          <input id="Buscar" class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search"  style="margin-left: 600px;">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
         </form>
       </div>
